--- a/resources/views/Containers/FooterServices/ShippingMethods.twig
+++ b/resources/views/Containers/FooterServices/ShippingMethods.twig
@@ -1,5 +1,5 @@
 <div class="footer-shipping-methods">
-  <div class="icon-sprite col-xs-12" id="dhl" title="DHL">
+  <div class="icon-sprite col-12" id="dhl" title="DHL">
       &nbsp;
   </div>
 </div>
