--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -760,21 +760,16 @@ pre code {
 }
 
 .container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
+  width: 100%;
   padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.container::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-@media (min-width: 544px) {
+@media (min-width: 576px) {
   .container {
-    max-width: 576px;
+    max-width: 540px;
   }
 }
 
@@ -786,7 +781,7 @@ pre code {
 
 @media (min-width: 992px) {
   .container {
-    max-width: 940px;
+    max-width: 960px;
   }
 }
 
@@ -797,10 +792,11 @@ pre code {
 }
 
 .container-fluid, .container-max {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
+  width: 100%;
   padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container-fluid::after, .container-max::after {
@@ -810,14 +806,29 @@ pre code {
 }
 
 .row {
-  margin-left: -15px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-right: -15px;
+  margin-left: -15px;
 }
 
 .row::after {
   content: "";
   display: table;
   clear: both;
+}
+
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.no-gutters > .col,
+.no-gutters > [class*="col-"] {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
