--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -32,35 +32,33 @@
 
 
     <div class="container-max footer-content">
-        <div class="row">
-            <div class="footer-services">
-                <div class="col-12 col-sm-12 col-lg-4">
-                    {% set paymentMethodContent = LayoutContainer.show("Ceres::Homepage.PaymentMethods") %}
-                    {% if paymentMethodContent|trim is not empty %}
-                        <div class="services-payment mb-1">
-                            <strong class="services-title">{{ trans("Ceres::Template.footerPaymentMethods") }}</strong>
-                            {{ paymentMethodContent }}
-                        </div>
-                    {% endif %}
-                </div>
-                <div class="col-6 col-sm-6 col-lg-4">
-                    {% set shippingContent = LayoutContainer.show("Ceres::Homepage.Shipping") %}
-                    {% if shippingContent|trim is not empty %}
-                        <div class="services-shipping mb-1">
-                            <strong class="services-title">{{ trans("Ceres::Template.footerOrderShippedBy") }}</strong>
-                            {{ shippingContent }}
-                        </div>
-                    {% endif %}
-                </div>
-                <div class="col-6 col-sm-6 col-lg-4">
-                    {% set certifiedContent = LayoutContainer.show("Ceres::Homepage.Certified") %}
-                    {% if certifiedContent|trim is not empty %}
-                        <div class="services-certificate mb-1">
-                            <strong class="services-title">{{ trans("Ceres::Template.footerCertifiedBy") }}</strong>
-                            {{ certifiedContent }}
-                        </div>
-                    {% endif %}
-                </div>
+        <div class="row footer-services">
+            <div class="col-12 col-sm-12 col-lg-4">
+                {% set paymentMethodContent = LayoutContainer.show("Ceres::Homepage.PaymentMethods") %}
+                {% if paymentMethodContent|trim is not empty %}
+                    <div class="services-payment mb-1">
+                        <strong class="services-title">{{ trans("Ceres::Template.footerPaymentMethods") }}</strong>
+                        {{ paymentMethodContent }}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="col-6 col-sm-6 col-lg-4">
+                {% set shippingContent = LayoutContainer.show("Ceres::Homepage.Shipping") %}
+                {% if shippingContent|trim is not empty %}
+                    <div class="services-shipping mb-1">
+                        <strong class="services-title">{{ trans("Ceres::Template.footerOrderShippedBy") }}</strong>
+                        {{ shippingContent }}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="col-6 col-sm-6 col-lg-4">
+                {% set certifiedContent = LayoutContainer.show("Ceres::Homepage.Certified") %}
+                {% if certifiedContent|trim is not empty %}
+                    <div class="services-certificate mb-1">
+                        <strong class="services-title">{{ trans("Ceres::Template.footerCertifiedBy") }}</strong>
+                        {{ certifiedContent }}
+                    </div>
+                {% endif %}
             </div>
         </div>
 
