--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -1,6 +1,6 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
-<header id="page-header" class="top-bar pos-f-t">
+<header id="page-header" class="top-bar fixed-top">
     <div>
         <div class="container-max">
             <div class="row">
@@ -108,7 +108,7 @@
                 <div class="container-max">
                     <div class="currency-select-inner row">
 
-                        <div class="currency-list col-xs-12">
+                        <div class="currency-list col-12">
                             <div class="list-title">
                                 <strong>{{ trans("Ceres::Template.headerCurrency") }}</strong>
                                 <hr>
