--- a/resources/views/Category/Content/CategoryContent.twig
+++ b/resources/views/Category/Content/CategoryContent.twig
@@ -12,7 +12,7 @@
 {% block PageBody %}
   <div class="container-max page-content">
       <div class="row">
-          <div class="col-xs-12 m-b-3">
+          <div class="col-12 mb-3">
             {% include category_template( category.id, lang, webstoreConfig.webstoreId ) ignore missing %}
           </div>
       </div>
