--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -23,18 +23,18 @@
 
     <div class="categoriegrid page-content container-max">
         {% if not ceresConfig.item.showCategoryImage %}
-            <div class="row m-t-1">
-                <div class="col-xs-12">
+            <div class="row mt-1">
+                <div class="col-12">
                     <h1 class="h2 category-title">{{ category.details[0].name }}</h1>
                     {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
-                        <div class="category-description m-b-1" data-category-description="1">
+                        <div class="category-description mb-1" data-category-description="1">
                           {% if category.details[0].description is not empty %}<div>{% endif %}
                             {{ category.details[0].description }}
                           {% if category.details[0].description is not empty %}</div>{% endif %}
                         </div>
                     {% endif %}
                     {% if categoryDescriptionTop == "description2" or categoryDescriptionTop == "both" %}
-                        <div class="category-description m-b-1" data-category-description="2">
+                        <div class="category-description mb-1" data-category-description="2">
                           {% if category.details[0].description2 is not empty %}<div>{% endif %}
                             {{ category.details[0].description2 }}
                           {% if category.details[0].description2 is not empty %}</div>{% endif %}
@@ -44,10 +44,10 @@
             </div>
         {% endif %}
 
-        <div class="list-controls m-b-3">
+        <div class="list-controls mb-3">
             <div class="list-controls-inner">
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-12">
                         <div class="list-wrapper">
                             {% include "Ceres::Category.Item.Partials.ItemSorting" with { 'sortingData': searchOptions.sorting, 'selectedSorting': itemSorting } %}
                             {% include "Ceres::Category.Item.Partials.ItemsPerPage" with { 'itemsPerPage': searchOptions.itemsPerPage, 'selectedValue': itemsPerPage } %}
@@ -67,8 +67,8 @@
         </div>
 
         {% if ceresConfig.pagination.position in ['top', 'top_bottom'] %}
-            <div class="list-controls m-b-3 row">
-                <div class="col-xs-12">
+            <div class="list-controls mb-3 row">
+                <div class="col-12">
                     {% include "Ceres::Category.Item.Partials.Pagination" %}
                     <noscript>
                         {% include "Ceres::Category.Item.Partials.Pagination" %}
@@ -80,7 +80,7 @@
         <div class="row">
 
             {% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}
-                <div class="col-xs-3 hidden-md-down">
+                <div class="col-3 hidden-md-down">
                     <div class="sidebar-categories">
                         <div class="category-title">{{ trans("Ceres::Template.itemCategories") }}</div>
                         {{ include('Ceres::PageDesign.Partials.Header.SideNavigation.twig') }}
@@ -91,7 +91,7 @@
 
             {% endif %}
 
-            <div class="col-xs-12 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}9{% else %}12{% endif %}">
+            <div class="col-12 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}9{% else %}12{% endif %}">
 
                 <div id="twig-rendered-item-list" class="item-list-frame{% if ceresConfig.item.loadingAnimationType == "blur" %} blur-effect{% endif %}">
 
@@ -101,7 +101,7 @@
 
                     <ul class="product-list row grid" v-is-loading-watcher="$store.state.itemList.isLoading">
                         {% for item in itemList %}
-                            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}4{% else %}3{% endif %}">
+                            <li class="col-12 col-sm-6 col-md-4 col-lg-{% if ceresConfig.header.showNavBars == "side" or ceresConfig.header.showNavBars == "both" %}4{% else %}3{% endif %}">
                                 {% include "Ceres::Category.Item.Partials.CategoryListItem" with { 'item': item, 'shippingCat': shippingCat } %}
                             </li>
                         {% endfor %}
@@ -115,8 +115,8 @@
             </div>
         </div>
         {% if ceresConfig.pagination.position in ['bottom', 'top_bottom'] %}
-            <div class="list-controls m-b-3 row">
-                <div class="col-xs-12">
+            <div class="list-controls mb-3 row">
+                <div class="col-12">
                     {% include "Ceres::Category.Item.Partials.Pagination" %}
                     <noscript>
                         {% include "Ceres::Category.Item.Partials.Pagination" %}
@@ -125,12 +125,12 @@
             </div>
         {% endif %}
 
-        <div class="col-xs-12">
+        <div class="col-12">
             {% if categoryDescriptionBottom == "description1" or categoryDescriptionBottom == "both" %}
-                <div class="category-description m-b-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
+                <div class="category-description mb-1" data-category-description="1">{{ category.details[0].description | raw }}</div>
             {% endif %}
             {% if categoryDescriptionBottom == "description2" or categoryDescriptionBottom == "both" %}
-                <div class="category-description m-b-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
+                <div class="category-description mb-1" data-category-description="2">{{ category.details[0].description2 | raw }}</div>
             {% endif %}
         </div>
     </div>
