--- a/resources/views/Category/Item/Partials/CategoryParallaxImage.twig
+++ b/resources/views/Category/Item/Partials/CategoryParallaxImage.twig
@@ -6,14 +6,14 @@
             <div class="parallax-text-container">
                 <h1 class="h2 category-title">{{ category.details[0].name | raw }}</h1>
                     {% if categoryDescriptionTop == "description1" or categoryDescriptionTop == "both" %}
-                        <div class="category-description m-b-1" data-category-description="1">
+                        <div class="category-description mb-1" data-category-description="1">
                           {% if category.details[0].description is not empty %}<div>{% endif %}
                             {{ category.details[0].description }}
                           {% if category.details[0].description is not empty %}</div>{% endif %}
                         </div>
                     {% endif %}
                     {% if categoryDescriptionTop == "description2" or categoryDescriptionTop == "both" %}
-                        <div class="category-description m-b-1" data-category-description="2">
+                        <div class="category-description mb-1" data-category-description="2">
                           {% if category.details[0].description2 is not empty %}<div>{% endif %}
                             {{ category.details[0].description2 }}
                           {% if category.details[0].description2 is not empty %}</div>{% endif %}
