--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -7,17 +7,17 @@
 <script type="x/template" id="vue-single-item">
     <div>
         <div class="single container-max page-content">
-            <div class="row m-t-3">
+            <div class="row mt-3">
                 <div class="col-md-7 single-leftside">
                     <div class="row">
-                        <div class="col-xs-12">
+                        <div class="col-12">
                             <slot name="ImageCarousel"></slot>
                         </div>
                     </div>
                 </div>
 
                 <!-- ITEM DETAIL -->
-                <div class="col-md-5 single-rightside m-t-1" v-stick-in-parent>
+                <div class="col-md-5 single-rightside mt-1" v-stick-in-parent>
                     <div class="producertag h6 producer text-muted" v-if="currentVariation.filter.hasManufacturer">
                         ${ currentVariation.item.manufacturer.externalName }
                     </div>
@@ -34,7 +34,7 @@
 
                     <hr>
 
-                    <div class="m-b-3">
+                    <div class="mb-3">
                         <span class="articlenumber small text-muted">
                             <b>{{ trans("Ceres::Template.singleItemNumber") }}</b>
                             <span>${ currentVariation.variation.number }</span>
@@ -42,7 +42,7 @@
                     </div>
 
                     <!-- Variation -->
-                    <div class="row m-b-1" v-if="variations.length > 0">
+                    <div class="row mb-1" v-if="variations.length > 0">
                         <variation-select template="#vue-variation-select" :attributes="attributeNameMap" :variation-units="variationUnits" :variations="variations" :preselect="currentVariation.variation.id" :unitPreselect="currentVariation.variation.unitCombinationId" @is-valid-change="isVariationSelected = $event"></variation-select>
                     </div>
                     <!-- /Variation -->
@@ -75,7 +75,7 @@
                         <span :content="currentVariation.prices.default.currency"></span>
                     </span>
 
-                    <div class="base-price text-muted m-y-1" v-if="currentVariation.unit">
+                    <div class="base-price text-muted my-1" v-if="currentVariation.unit">
                         <div>
                             {{ trans("Ceres::Template.singleItemContent") }}
                             <span>${ currentVariation.unit.content | numberFormat }</span>
@@ -97,7 +97,7 @@
                         </span>
                     </span>
 
-                    <div class="row m-y-1">
+                    <div class="row my-1">
                         <slot name="BeforeAddToBasket"></slot>
 
                         {{ AddToBasket.printVueComponent(
@@ -133,7 +133,7 @@
                 </div>
 
                 <!-- ITEM DESCRIPTION -->
-                <div class="col-md-7 m-y-3">
+                <div class="col-md-7 my-3">
                     <ul class="nav nav-tabs" role="tablist">
                         {% if 'item.description' in itemData or 'all' in itemData %}
                             <li class="nav-item" v-if="isDescriptionTabActive">
@@ -157,20 +157,20 @@
                     <div class="tab-content">
                         {% if 'item.description' in itemData or 'all' in itemData %}
                             <div class="tab-pane active" :id="'details-' + currentVariation.variation.id" role="tabpanel" v-if="isDescriptionTabActive">
-                                <div class="m-y-2" v-html="currentVariation.texts.description">
+                                <div class="my-2" v-html="currentVariation.texts.description">
                                 </div>
                             </div>
                         {% endif %}
 
                         {% if 'item.technical_data' in itemData or 'all' in itemData %}
                             <div :class="{ 'active': !isDescriptionTabActive && isTechnicalDataTabActive }" class="tab-pane" :id="'data-' + currentVariation.variation.id" role="tabpanel" v-if="isTechnicalDataTabActive">
-                                <div class="m-y-2" v-html="currentVariation.texts.technicalData">
+                                <div class="my-2" v-html="currentVariation.texts.technicalData">
                                 </div>
                             </div>
                         {% endif %}
 
                         <div :class="{ 'active': !isDescriptionTabActive && !isTechnicalDataTabActive }" class="tab-pane" id="assessments-details" role="tabpanel">
-                            <div class="m-y-2">
+                            <div class="my-2">
                                 <table class="table table-striped table-hover table-sm">
                                     <tbody>
                                     {% if 'item.id' in itemData or 'all' in itemData %}
