--- a/resources/views/MyAccount/MyAccount.twig
+++ b/resources/views/MyAccount/MyAccount.twig
@@ -17,9 +17,9 @@
     {% set isReturnActive = services.order.isReturnActive() %}
     {% set contactHasReturns = services.customer.hasReturns() %}
 
-    <div class="page-content myaccount container-max m-b-3 m-t-1">
+    <div class="page-content myaccount container-max mb-3 mt-1">
         <!-- HEADER -->
-        <div class="row m-b-3">
+        <div class="row mb-3">
             <div class="col-sm-9">
                 <h1 class="h2">{{ trans("Ceres::Template.myAccount") }}</h1>
                 {% if frontend.Account.getIsAccountLoggedIn %}
@@ -31,12 +31,12 @@
                 {% endif %}
             </div>
             <div class="col-sm-3">
-                <a href="#" class="btn btn-danger pull-xs-right btn-medium" v-logout>
+                <a href="#" class="btn btn-danger float-xs-right btn-medium" v-logout>
                     <i class="fa fa-sign-out"></i>
                     {{ trans("Ceres::Template.myAccountLogout") }}
                 </a>
             </div>
-            <div class="col-xs-12">
+            <div class="col-12">
                 <hr class="">
             </div>
         </div>
@@ -75,7 +75,7 @@
                 </h4>
                 <p class="text-muted small font-italic">{{ trans("Ceres::Template.myAccountChangeLoginData") }}</p>
 
-                <div class="card m-b-3">
+                <div class="card mb-3">
                     <account-settings template="#vue-account-settings" :user-data="{{ userObject }}">
                         <account-settings>
                 </div>
