--- a/resources/views/Category/Content/CategoryContent.twig
+++ b/resources/views/Category/Content/CategoryContent.twig
@@ -13,7 +13,19 @@
   <div class="container-max page-content">
       <div class="row">
           <div class="col-12 mb-3">
-            {% include category_template( category.id, lang, webstoreConfig.webstoreId ) ignore missing %}
+            
+            {% set shopBuilderTemplate = shop_builder_category_template(category.id) %}
+            {% if shopBuilderTemplate | trim is not empty %}
+                <div class="container-max">
+                    <div class="row">
+                        <div class="col">
+                            {{ shopBuilderTemplate | raw }}
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                {% include category_template( category.id, lang, webstoreConfig.webstoreId ) ignore missing %}
+            {% endif %}
           </div>
       </div>
   </div>
