--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -182,7 +182,7 @@
 
 {{ Loader.include_components() }}
 
-{{ LayoutContainer.show("Ceres::Script.Loader") }}
+{{ LayoutContainer.show("K8theme::Script.Loader") }}
 
 {{ Translations.add( "Ceres", "Template" ) }}
 {% if ceresConfig.log.performanceLevel  == 'development' %}
@@ -196,7 +196,7 @@
     {% include scriptTemplate.path ignore missing with scriptTemplate.params %}
 {% endfor %}
 
-{{ LayoutContainer.show("Ceres::Script.AfterScriptsLoaded") }}
+{{ LayoutContainer.show("K8theme::Script.AfterScriptsLoaded") }}
 
 {{ get_filtered_tags() }}
 
