--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -186,17 +186,17 @@
 
 {{ Translations.add( "Ceres", "Template" ) }}
 {% if ceresConfig.log.performanceLevel  == 'development' %}
-    <script src="{{ plugin_path('K8theme') }}/js/dist/ceres-vendor.js"></script>
-    <script src="{{ plugin_path('K8theme') }}/js/dist/ceres-app.js"></script>
+    <script src="{{ plugin_path('Ceres') }}/js/dist/ceres-vendor.js"></script>
+    <script src="{{ plugin_path('Ceres') }}/js/dist/ceres-app.js"></script>
 {% else %}
-    <script src="{{ plugin_path('K8theme') }}/js/dist/ceres.min.js"></script>
+    <script src="{{ plugin_path('Ceres') }}/js/dist/ceres.min.js"></script>
 {% endif %}
 
 {% for scriptTemplate in get_additional_scripts() %}
     {% include scriptTemplate.path ignore missing with scriptTemplate.params %}
 {% endfor %}
 
-{{ LayoutContainer.show("K8theme::Script.AfterScriptsLoaded") }}
+{{ LayoutContainer.show("Ceres::Script.AfterScriptsLoaded") }}
 
 {{ get_filtered_tags() }}
 
