--- a/resources/views/ItemList/Components/ItemSearch.twig
+++ b/resources/views/ItemList/Components/ItemSearch.twig
@@ -10,7 +10,7 @@
                 <i class="fa fa-search sm-up"></i>
             </button>
 
-            <div class="autocomplete-suggestions container" v-if="isSearchFocused && autocompleteResult.length">
+            <div class="autocomplete-suggestions container">
                 <div class="autocomplete-suggestion row" v-for="(item, index) in autocompleteResult" :key="index" @mousedown="selectAutocompleteItem(item)" :class="{ 'autocomplete-selected': selectedAutocompleteIndex === index, 'odd': index % 2 === 0, 'even': index % 2 !== 0 }">
                     <div class="autocomplete-image-container col-2" v-if="showItemImages">
                         <img class="autocomplete-image" :src="item.img">
