--- a/resources/views/ItemList/Components/ItemSearch.twig
+++ b/resources/views/ItemList/Components/ItemSearch.twig
@@ -10,9 +10,9 @@
                 <i class="fa fa-search sm-up"></i>
             </button>
 
-            <div class="autocomplete-suggestions container">
+            <div class="autocomplete-suggestions container" v-if="isSearchFocused && autocompleteResult.length">
                 <div class="autocomplete-suggestion row" v-for="(item, index) in autocompleteResult" :key="index" @mousedown="selectAutocompleteItem(item)" :class="{ 'autocomplete-selected': selectedAutocompleteIndex === index, 'odd': index % 2 === 0, 'even': index % 2 !== 0 }">
-                    <div class="autocomplete-image-container col-2" v-if="isSearchFocused && autocompleteResult.length">
+                    <div class="autocomplete-image-container col-2">
                         <img class="autocomplete-image" :src="item.img">
                     </div>
                     <div class="autocomplete-item-name col-10" v-html="item.displayName"></div>
