--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -24,7 +24,7 @@
 
                     <h1 class="h2 title">
                         <span>
-                            ${ currentVariation | itemName }
+                            ${ currentVariation | itemName }ULLEBULLE
                         </span>
                     </h1>
 
@@ -75,12 +75,6 @@
                         <span :content="currentVariation.prices.default.currency"></span>
                     </span>
 
-                    <span class="vat small text-muted">
-                        * {% if services.customer.showNetPrices() %}{{ trans("Ceres::Template.singleItemExclVAT") }}{% else %}{{ trans("Ceres::Template.singleItemInclVAT") }}{% endif %} {{ trans("Ceres::Template.singleItemExclusive") }}
-                        <a {% if shippingCat is not empty %} data-toggle="modal" href="#shippingscosts"{% endif %} title="{{ trans("Ceres::Template.singleItemShippingCosts") }}">{{ trans("Ceres::Template.singleItemShippingCosts") }}</a>
-                    </span>
-                    <hr>
-
                     <div class="base-price text-muted my-1" v-if="currentVariation.unit">
                         <div>
                             {{ trans("Ceres::Template.singleItemContent") }}
@@ -127,7 +121,12 @@
 
                     <slot name="AdditionalContentAfterAddToBasket"></slot>
 
+                    <hr>
 
+                    <span class="vat small text-muted">
+                        * {% if services.customer.showNetPrices() %}{{ trans("Ceres::Template.singleItemExclVAT") }}{% else %}{{ trans("Ceres::Template.singleItemInclVAT") }}{% endif %} {{ trans("Ceres::Template.singleItemExclusive") }}
+                        <a {% if shippingCat is not empty %} data-toggle="modal" href="#shippingscosts"{% endif %} title="{{ trans("Ceres::Template.singleItemShippingCosts") }}">{{ trans("Ceres::Template.singleItemShippingCosts") }}</a>
+                    </span>
 
                     <slot name="AdditionalContentAfterVAT"></slot>
 
