add google site verification for https://krazy8.de

--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -2,6 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="Oq7yOEi9QxJW4QwWXGGWDBgw3ODw-g6scsTXx3Zfzus" />
+<meta name="google-site-verification" content="a-vvihRjPoxEoXpiPSibcuTgrYDa5px5ReLfz638Bqw" />
 
 {% set lang = services.sessionStorage.getLang() %}
 
